# tetris

./: .clinerules  .gitignore  .gitmodules  CMakeLists.txt  README.md  best_practices.txt  run_linux.sh
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
backend/: server.py
src/: main.cpp  network.cpp  network.hpp  test_main.cpp  tetris_core.hpp
